--- a/style.css
+++ b/style.css
@@ -55,3 +55,10 @@ button:hover {
         font-size: 18px;
     }
 }
+
+#question {
+    max-width: 100%; 
+    word-wrap: break-word; 
+    padding: 0 20px; 
+    text-align: center; 
+}
